fix: gaps

--- a/src/containers/Tenant/Diagnostics/TenantOverview/TenantOverview.scss
+++ b/src/containers/Tenant/Diagnostics/TenantOverview/TenantOverview.scss
@@ -17,10 +17,6 @@
     }
 
     &__top {
-        display: flex;
-        align-items: center;
-        gap: 4px;
-
         margin-bottom: 10px;
 
         line-height: 24px;
